--- a/app/config/parameters_dist.yml
+++ b/app/config/parameters_dist.yml
@@ -43,7 +43,7 @@ parameters:
         #SomeOtherSecret: restrictedMasterKey
     
     # Set to false to disable consent check upon attribute release
-    hexaa_consent_module: true
+    hexaa_consent_module: false
     
     # CORS origins
     # Array of regular expressions which defines CORS origins for /api/*
