--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,10 @@
     "php": ">=5.3.9",
     "ext-curl": "*",
     "ext-intl": "*",
-    "ext-mcrypt": "*",
+    "ext-xml": "*",
     "ext-pdo_mysql": "*",
     "ext-memcached": "*",
+    "ext-openssl": "*",
     "lib-curl": "*",
     "symfony/symfony": "~2.3",
     "symfony/icu": "~1.2.2",
