Rewrite new Dockerfile

--- a/docker-prod/Dockerfile
+++ b/docker-prod/Dockerfile
@@ -1,7 +1,22 @@
-FROM bitnami/php-fpm
+FROM php:7.2.1-fpm-stretch
 LABEL MAINTAINER Balázs SOLTÉSZ <solazs@sztaki.hu>
 
-COPY . /app
+# Install some dependencies
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
+                       wget \
+                       libicu-dev \
+                       libmemcached-dev \
+                       zlib1g-dev \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/* \
+    && docker-php-ext-configure intl \
+    && docker-php-ext-install -j$(nproc) pdo pdo_mysql intl bcmath \
+    && pecl install memcached-3.0.4 \
+    && docker-php-ext-enable memcached
+
+# Copy source to container
+COPY . /opt/hexaa-backend
 
 # Install composer
 COPY docker-prod/composer_downloader.sh /usr/local/bin/
@@ -12,12 +27,13 @@ RUN chmod +x /usr/local/bin/composer_downloader.sh \
     && chmod +x /usr/local/bin/composer
     
 # Install dependencies
-RUN cd /app \
+RUN cd /opt/hexaa-backend \
     && composer install -o \
-    && rm -rf /app/app/cache/*
+    && rm -rf app/cache/* \
+    && cd /var/www && rm -r html && ln -s html /opt/hexaa-backend/web 
 
-VOLUME /app
+VOLUME /opt/hexaa-backend
 
-COPY docker-prod/boot-and-start-php-fpm.sh /usr/local/bin/
+COPY docker-prod/boot.sh /usr/local/bin/
 
-CMD ["/usr/local/bin/boot-and-start-php-fpm.sh"]
+CMD ["/usr/local/bin/boot.sh"]
