Ignore .directory files + fix some errors with the new docker container.

--- a/docker-prod/config_prod.yml
+++ b/docker-prod/config_prod.yml
@@ -30,5 +30,6 @@ monolog:
         
     handlers:
         main:
-            type:  error_log
+            type:  stream
+            path:  "php://stdout"
             level: info
