--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "ext-memcached": "*",
     "ext-openssl": "*",
     "lib-curl": "*",
-    "symfony/symfony": "~2.3",
+    "symfony/symfony": "~2.8",
     "symfony/icu": "~1.2.2",
     "doctrine/orm": "*",
     "doctrine/doctrine-bundle": "*",
@@ -29,16 +29,17 @@
     "sensio/generator-bundle": "~3.0.0",
     "jms/serializer-bundle": "~1.1.0",
     "friendsofsymfony/rest-bundle": "~1.7.2",
-    "nelmio/api-doc-bundle": "~2.10.3",
-    "friendsofsymfony/http-cache-bundle": "*",
+    "nelmio/api-doc-bundle": "~2.13.0",
+    "friendsofsymfony/http-cache-bundle": "~2.3.0",
     "willdurand/hateoas-bundle": "dev-master#3d46f0a8ee6287a01edcd2d5eeae0e8b95aab2b7",
     "hautelook/templated-uri-bundle": "~2.0.0",
     "willdurand/rest-extra-bundle": "~1.0.2",
     "egulias/email-validator": "~1.2.11",
     "ramsey/uuid": "~3.0.0",
     "nelmio/cors-bundle": "~1.4.0",
-    "jms/translation-bundle": "~1.1.0",
-    "moontoast/math": "~1.1.0"
+    "jms/translation-bundle": "~1.4.0",
+    "moontoast/math": "~1.1.0",
+    "php-http/guzzle6-adapter": "^1.1"
   },
   "conflict": {
     "symfony/routing": "2.4.1",
