Update more deps

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -71,7 +71,7 @@ swiftmailer:
     #spool:     { type: memory }
 
 sensio_framework_extra:
-    view: { annotations: false }
+    view: { annotations: true }
 
 fos_rest:
     disable_csrf_role: ROLE_API
