--- a/src/Hexaa/ApiBundle/Resources/config/services.yml
+++ b/src/Hexaa/ApiBundle/Resources/config/services.yml
@@ -133,6 +133,14 @@ services:
     hexaa.hook_extractor.service:
         class: "%hexaa_hook_extractor.class%"
         arguments: [ "@doctrine.orm.entity_manager", "@monolog.logger.hook", "@monolog.logger.release", "@hexaa.hook.cache.memcached" ]
+    hexaa.my_handler:
+        class: Hexaa\ApiBundle\View\ViewHandler
+        arguments: ['@fos_rest.router', '@fos_rest.serializer', '@?fos_rest.templating', '@request_stack', {  }, '', '', '', {  }, '']
+
+    hexaa.view_handler:
+        parent: fos_rest.view_handler.default
+        calls:
+            - ['registerHandler', [ 'my_format', ["@hexaa.my_handler", 'createResponse'] ] ]
 
 # Validators
     validator.unique.valid_entityid:
