Fix regression of expand feature caused by fosrest update

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -78,7 +78,8 @@ fos_rest:
     
     param_fetcher_listener: true
     view:
-        view_response_listener: 'force'
+        view_response_listener:
+          force: true
         formats:
             xml:  true
             json: true
