--- a/docker-prod/Dockerfile
+++ b/docker-prod/Dockerfile
@@ -29,6 +29,7 @@ COPY . /opt/hexaa-backend
 # Install composer
 COPY docker-prod/composer_downloader.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/composer_downloader.sh \
+    && sync \
     && cd /usr/local/bin/ \
     && /usr/local/bin/composer_downloader.sh \
     && mv /usr/local/bin/composer.phar /usr/local/bin/composer \
