--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
     "ext-memcached": "*",
     "ext-openssl": "*",
     "lib-curl": "*",
-    "symfony/symfony": "~2.8,>=v2.8.50",
-    "symfony/icu": "~1.2.2",
+    "symfony/symfony": "~3.4.48",
     "doctrine/orm": "*",
     "doctrine/doctrine-bundle": "*",
     "doctrine/dbal": "*",
@@ -29,13 +28,13 @@
     "sensio/distribution-bundle": "~5.0.1",
     "sensio/framework-extra-bundle": "~3.0.11",
     "sensio/generator-bundle": "~3.0.0",
-    "jms/serializer-bundle": "~2.4.0",
-    "friendsofsymfony/rest-bundle": "~2.3.0",
+    "jms/serializer-bundle": "~3.9.0",
+    "friendsofsymfony/rest-bundle": "~2.8.6",
     "nelmio/api-doc-bundle": "~2.13.0",
     "friendsofsymfony/http-cache-bundle": "~2.3.0",
-    "willdurand/hateoas-bundle": "dev-master#3d46f0a8ee6287a01edcd2d5eeae0e8b95aab2b7",
+    "willdurand/hateoas-bundle": "~2.2.0",
     "hautelook/templated-uri-bundle": "~2.0.0",
-    "willdurand/rest-extra-bundle": "~1.0.2",
+    "willdurand/rest-extra-bundle": "~2.1.0",
     "egulias/email-validator": "~1.2.11",
     "ramsey/uuid": "~3.0.0",
     "nelmio/cors-bundle": "~1.4.0",
